src/test/deca/syntax/invalid/decl_missing_expr.deca

// Description :
// Expression manquante après '=' en déclaration
//
// Resultats :
// Erreur syntaxique
// mismatched input ';'
// Regle : decl_var : ident ('=' expr)?

{
    int x = ;
}